Replace shelf bell icon when do-not-disturb mode is on.

When there is no notification, the bell icon is shown on the shelf.
When you enable do-not-disturb mode from the notification center, it
should also change the bell icon icon on the shelf as well.

Mock: https://crbug.com/751390#c6

TEST=manual
BUG=751390

Change-Id: I6f537ba0ca02e1e6bbf93683d64ed932f47e4af9